--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,10 @@ nav {
   margin: 0 auto;
 }
 
+.about-picture-section {
+  display: flex;
+  align-items: center;
+}
 .about-section {
   padding: 100px;
   background: var(--secondary-color);
@@ -110,4 +114,21 @@ nav {
 
 #navbarNav {
   justify-content: flex-end;
+}
+
+@media (max-width: 992px) {
+  .about-picture-section {
+    display: none;
+  }
+  .social-CTA {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 908px) {
+  .hero-buttons {
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
 }
