--- a/src/styles.css
+++ b/src/styles.css
@@ -120,15 +120,67 @@ nav {
   .about-picture-section {
     display: none;
   }
+  .about-section {
+    padding: 60px;
+  }
   .social-CTA {
     font-size: 16px;
   }
+  .hero-section,
+  .lets-connect {
+    padding: 50px;
+  }
 }
 
-@media (max-width: 908px) {
-  .hero-buttons {
-    display: flex;
-    align-items: center;
+@media (max-width: 901px) {
+  .about-section,
+  .lets-connect {
+    padding: 50px;
+  }
+  .introduction {
+    display: block;
+    margin: 0 auto;
     text-align: center;
+  }
+  .hero-break,
+  .hero-picture-section {
+    display: none;
+  }
+  .hero-section {
+    padding: 90px;
+  }
+}
+
+@media (max-width: 768px) {
+  .fa-5x {
+    font-size: 3em;
+  }
+  .social-CTA {
+    display: none;
+  }
+}
+
+@media (max-width: 576px) {
+  h3 {
+    font-size: 1.1em;
+  }
+  .about-section {
+    padding: 30px 50px;
+  }
+  .desktop-description {
+    display: none;
+  }
+  .hero-section {
+    padding: 100px 30px;
+  }
+  .hero-portfolio-btn,
+  .hero-contact-btn {
+    padding: 5px 10px;
+  }
+  .learn-more-link {
+    font-size: 18px;
+  }
+  .lets-connect {
+    padding: 30px;
   }
 }
