--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,9 @@ body {
 }
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5 {
   font-family: "Playfair Display", serif;
 }
 
@@ -72,7 +74,8 @@ nav {
 }
 .home-about-section,
 .about-me-introduction,
-.about-footer {
+.about-footer,
+.portfolio-header {
   background: var(--secondary-color);
 }
 
@@ -94,12 +97,28 @@ nav {
   border: 1px solid;
 }
 
+.d-block {
+  margin: 0 auto;
+  max-height: 500px;
+}
+
 .hero-portfolio-btn:hover,
 .hero-contact-btn:hover {
   background-color: var(--primary-color);
   transition: ease-in-out;
   color: #fff;
   transition-duration: 20ms;
+}
+
+.light-text-background {
+  background-color: #ffffff;
+  opacity: 0.9;
+  margin: 10px 100px;
+  border-radius: 5px;
+}
+
+.light-text {
+  color: var(--primary-color);
 }
 
 .hero-section,
@@ -113,7 +132,8 @@ nav {
 .introduction,
 .about-me-introduction,
 .about-me-linkedin-section,
-.contact-me-blurb {
+.contact-me-blurb,
+.portfolio-header {
   display: flex;
   align-items: center;
 }
