--- a/src/styles.css
+++ b/src/styles.css
@@ -125,7 +125,8 @@ nav {
 .home-lets-connect,
 .about-me-introduction,
 .about-me-linkedin-section,
-.home-about-section {
+.home-about-section,
+.portfolio-header {
   padding: 100px;
 }
 
