--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ nav {
 }
 .home-about-section,
 .about-me-introduction,
-.about-footer,
+.dark-footer,
 .portfolio-header {
   background: var(--secondary-color);
 }
@@ -79,6 +79,11 @@ nav {
   justify-content: center;
 }
 
+.skillset {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 .hero-portfolio-btn,
 .hero-contact-btn {
   padding: 10px 20px;
@@ -117,11 +122,12 @@ nav {
 }
 
 .hero-section,
-.home-lets-connect,
+.lets-connect,
 .about-me-introduction,
 .about-me-linkedin-section,
 .home-about-section,
-.portfolio-header {
+.portfolio-header,
+.contact-header {
   padding: 50px;
 }
 
@@ -176,7 +182,11 @@ nav {
 #navbarNav {
   justify-content: flex-end;
 }
-
+@media (min-width: 1201px) {
+  .seo-short {
+    display: none;
+  }
+}
 @media (max-width: 1200px) {
   .home-about-picture-section {
     display: none;
@@ -184,13 +194,16 @@ nav {
   .about-me-introduction-picture {
     max-width: 50%;
   }
+  .seo-short {
+    display: none;
+  }
 }
 @media (max-width: 992px) {
   .social-CTA {
     font-size: 16px;
   }
   .hero-section,
-  .home-lets-connect {
+  .lets-connect {
     padding: 50px;
   }
   .about-me-introduction-picture {
@@ -198,6 +211,9 @@ nav {
   }
   .about-me-introduction-blurb {
     text-align: center;
+  }
+  .seo-short {
+    display: none;
   }
 }
 
@@ -214,6 +230,9 @@ nav {
   .hero-section {
     padding: 90px;
   }
+  .seo-short {
+    display: none;
+  }
 }
 
 @media (max-width: 768px) {
@@ -226,9 +245,21 @@ nav {
   h2 {
     font-size: 32px;
   }
+  .seo {
+    display: none;
+  }
+  .seo-short {
+    display: block;
+  }
 }
 
 @media (max-width: 576px) {
+  .contact-header h1 {
+    font-size: 35px;
+  }
+  .contact-header {
+    padding: 20px 10px;
+  }
   h3 {
     font-size: 20px;
   }
@@ -255,8 +286,11 @@ nav {
   .home-learn-more-link {
     font-size: 18px;
   }
-  .home-lets-connect {
+  .lets-connect {
     padding: 30px;
+  }
+  .seo-short {
+    display: block;
   }
   .about-me-recommendation-picture {
     display: none;
